--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,8 +22,8 @@ title: CleanRx
 email: jorge.castro@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
   Architecture Guidance for .NET
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/CleanRx/docs" # the subpath of your site, e.g. /blog
+url: "https://keozx.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
