--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -93,10 +93,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Jorge Castro"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : ".NET Developer"
+  location         : "USA / Mexico"
   email            :
   links:
     - label: "Email"
