--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -70,7 +70,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : keozdev
 facebook:
   username               :
   app_id                 :
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Jorge Castro"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/profile.jpg"
   bio              : ".NET Developer"
   location         : "USA / Mexico"
   email            :
@@ -123,13 +123,13 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url:
+      url: "https://twitter.com/keozdev"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/keozx"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
